# production-rag-finance

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
docs/: architecture.md  benchmarks.md  deployment.md
docs/adr/: 001-hybrid-retrieval.md  002-no-langchain.md  003-fastembed-over-torch.md
scripts/: download_filings.py  ingest.py  run_eval.py  run_ragas.py
src/rag/: logging_config.py  pipeline.py  schemas.py  settings.py
src/rag/api/: main.py
src/rag/api/routes/: query.py
src/rag/cache/: semantic_cache.py
src/rag/eval/: benchmark_dataset.py  metrics.py  runner.py
src/rag/generation/: answerer.py  compressor.py  llm_client.py
src/rag/generation/prompts/: templates.py
src/rag/guardrails/: grounding.py
src/rag/ingestion/: pipeline.py
src/rag/ingestion/chunkers/: semantic_chunker.py
src/rag/ingestion/parsers/: html_parser.py  pdf_parser.py
src/rag/observability/: tracer.py
src/rag/query/: decomposer.py  hyde.py  multi_query.py  rewriter.py  router.py
src/rag/retrieval/: embeddings.py  fusion.py  hybrid.py  reranker.py  sparse.py  vector_store.py
tests/: test_chunker.py  test_compressor.py  test_fusion.py
